
## [3.3.0] - 2019-04-25
# Added
- Enabling Schema validation for all githosts.
- Changing the way Bitbucket API Client works, due to GDPR breaking
changes on their API. Therefore removing the usage of the 'username' field:
https://developer.atlassian.com/cloud/bitbucket/bitbucket-api-changes-gdpr/

# Fixed
- No more API v1 calls for bitbucket.

## [3.2.10] - 2019-02-14
# Added
- Add support for the "design" branch prefix

## [3.2.9] - 2019-02-08
# Fixed
- Fix the github review summarizing function to handle reviewers with only
"COMMENTED" reviews.

## [3.2.8] - 2019-01-30
# Fixed
- Fix rendering of the Init Message for open PRs including the user doc link
- Fix the author approval counting logic for github when commenting after an
  approval
# Added
- Add support for review dismissal and request for changes in github review
  system. Requests for change now block bert-e's progress.

## [3.2.7] - 2018-12-17
# Added
- Add a configuration field to specify the reachable URL for BertE's UI
# Changed
- Improve BertE's init messages with a link to its UI for the users

## [3.2.6] - 2018-11-28
# Fixed
- Fixed the user documentation for the disable_version_check flag

## [3.2.5] - 2018-11-28
# Added
- Add a configuration flag to allow disabling version checks for a bert-e
  instance

## [3.2.4] - 2018-11-16
# Fixed
- Lower case bugs on admin page and with PR authors

## [3.2.3] - 2018-11-13
# Fixed
- Change the author approval option from "approved" to "approve"

## [3.2.2] - 2018-11-12
# Fixed
- Handle insensitive case for usernames

# Added
- Add support for installing a link in Bitbucket
- Add support of author approval via comments (useful for Github)

## [3.2.1] - 2018-10-15
# Fixed
- Chart deployment can now be set without tls on ingress.

## [3.2.0] - 2018-09-11
# Added
- Add docker container for Bert-E and server.
- Add Kubernetes chart.
- Add repository management page to server.
- Add documentation pages to server.
- Add OAuth based authentication to server.